--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,15 @@ footer {
     background color: #e4b43a;*/
 }
 
+
 article {
     padding: 0 10px;
 
+}
+
+footer {
+    flex-direction: column;
+    gap: 20px;
 }
 
 main {
@@ -26,9 +32,9 @@ main {
 
 a {
     text-decoration: none;
-    color: azure;
+    color: rgb(129, 117, 30);
 }
 
-a {
+a:hover {
     text-decoration: underline;
 }
